--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Fri Apr  2 14:17:10 1999  Jerry James <jerry@cs.ucsb.edu>
+
+	* gcc/invoke.texi: Add documentation for additional supported
+	MIPS CPU types, options -mips16 and -mentry, and ABI and ISA
+	defaults.
+
 Fri Apr  2 14:12:06 EST 1999  John Wehle  (john@feith.com)
 
 	* i386.md: Delete floating point compare, add, subtract,
