* configure (gxx_include_dir): Removed. 	* configure.in (gxx_include_dir): Handle it. 	* Makefile.in: Likewise. 	* libio/configure.in (gxx_include_dir): Handle it. 	* libio/Makefile.in: Likewise. 	* libstdc++/configure.in (gxx_include_dir): Handle it. 	* libstdc++/Makefile.in: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26126 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Apr  2 15:11:32 1999  H.J. Lu  (hjl@gnu.org)
+
+	* configure (gxx_include_dir): Removed.
+
+	* configure.in (gxx_include_dir): Handle it.
+	* Makefile.in: Likewise.
+
 Thu Mar 18 00:17:50 1999  Mark Elbrecht <snowball3@usa.net>
 
 	* config/mh-go32: Delete.
