--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr  2 15:49:44 1999  Jeffrey A Law  (law@cygnus.com)
+
+        * Make-lang.in (CHILL_FLAGS_TO_PASS): Do not pass $(CC).
+
 Wed Mar 31 10:44:47 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
         * Makefile.in (hash.h): Generate using gperf language 'C', not
