--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Fri Apr  2 15:46:25 1999  Donn Terry (donn@interix.com)
+
+        * configure.in: Set and substitute quoted_cc_set_by_configure.
+	* configure: Rebuilt.
+	* Makefile.in (SUBDIR_FLAGS_TO_PASS): Fix quoting problem with ``.
+
 Fri Apr  2 14:35:45 1999  Stan Cox  <scox@cygnus.com>
 
 	* config/i386/cygwin.h (CPP_SPEC): Use mingw_include_path instead
