--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr  2 16:09:02 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* fixinc/*: Delete obsolete files.
+
 1999-02-04  Robert Lipe  <robertlipe@usa.net>
 
 	* egcs_update: Test return values of 'cvs update'.  Propogate 
