--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-02  Mark Mitchell  <mark@codesourcery.com>
+
+	* splay-tree.h (splay_tree_compare_pointers): Define.
+
 1999-03-30  Mark Mitchell  <mark@codesourcery.com>
 
 	* splay-tree.c (splay_tree_compare_ints): Define.
