--- a/gcc/tm.texi
+++ b/gcc/tm.texi
@@ -4777,37 +4777,61 @@ If you don't define this, a reasonable default is used.
 @item MOVE_BY_PIECES_P (@var{size}, @var{alignment})
 A C expression used to determine whether @code{move_by_pieces} will be used to
 copy a chunk of memory, or whether some other block move mechanism
-will be used. Defaults to 1 if @code{move_by_pieces_ninsns} returns less
+will be used.  Defaults to 1 if @code{move_by_pieces_ninsns} returns less
 than @code{MOVE_RATIO}.
 
 @findex MOVE_MAX_PIECES
 @item MOVE_MAX_PIECES
 A C expression used by @code{move_by_pieces} to determine the largest unit
-a load or store used to copy memory is. Defaults to @code{MOVE_MAX}.
+a load or store used to copy memory is.  Defaults to @code{MOVE_MAX}.
 
 @findex USE_LOAD_POST_INCREMENT
 @item USE_LOAD_POST_INCREMENT (@var{mode})
-A C expression used to determine whether a load postincrement is
-a good thing for @code{move_by_pieces} to use for a given mode. Defaults
-to the value of @code{HAVE_POST_INCREMENT}.
+A C expression used to determine whether a load postincrement is a good
+thing to use for a given mode.  Defaults to the value of
+@code{HAVE_POST_INCREMENT}.
+
+@findex USE_LOAD_POST_DECREMENT
+@item USE_LOAD_POST_DECREMENT (@var{mode})
+A C expression used to determine whether a load postdecrement is a good
+thing to use for a given mode.  Defaults to the value of
+@code{HAVE_POST_DECREMENT}.
 
 @findex USE_LOAD_PRE_INCREMENT
 @item USE_LOAD_PRE_INCREMENT (@var{mode})
-A C expression used to determine whether a load preincrement is
-a good thing for @code{move_by_pieces} to use for a given mode. Defaults
-to the value of @code{HAVE_PRE_INCREMENT}.
+A C expression used to determine whether a load preincrement is a good
+thing to use for a given mode.  Defaults to the value of
+@code{HAVE_PRE_INCREMENT}.
+
+@findex USE_LOAD_PRE_DECREMENT
+@item USE_LOAD_PRE_DECREMENT (@var{mode})
+A C expression used to determine whether a load predecrement is a good
+thing to use for a given mode.  Defaults to the value of
+@code{HAVE_PRE_DECREMENT}.
 
 @findex USE_STORE_POST_INCREMENT
 @item USE_STORE_POST_INCREMENT (@var{mode})
-A C expression used to determine whether a store postincrement is
-a good thing for @code{move_by_pieces} to use for a given mode. Defaults
-to the value of @code{HAVE_POST_INCREMENT}.
+A C expression used to determine whether a store postincrement is a good
+thing to use for a given mode.  Defaults to the value of
+@code{HAVE_POST_INCREMENT}.
+
+@findex USE_STORE_POST_DECREMENT
+@item USE_STORE_POST_DECREMENT (@var{mode})
+A C expression used to determine whether a store postdeccrement is a good
+thing to use for a given mode.  Defaults to the value of
+@code{HAVE_POST_DECREMENT}.
 
 @findex USE_STORE_PRE_INCREMENT
 @item USE_STORE_PRE_INCREMENT (@var{mode})
-This macro is used to determine whether a store preincrement is
-a good thing for @code{move_by_pieces} to use for a given mode. Defaults
-to the value of @code{HAVE_PRE_INCREMENT}.
+This macro is used to determine whether a store preincrement is a good
+thing to use for a given mode.  Defaults to the value of
+@code{HAVE_PRE_INCREMENT}.
+
+@findex USE_STORE_PRE_DECREMENT
+@item USE_STORE_PRE_DECREMENT (@var{mode})
+This macro is used to determine whether a store predecrement is a good
+thing to use for a given mode.  Defaults to the value of
+@code{HAVE_PRE_DECREMENT}.
 
 @findex NO_FUNCTION_CSE
 @item NO_FUNCTION_CSE
