--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr  2 17:49:44 1999  Toshiyasu Morita <tm@netcom.com>
+
+	* regmove.c (fixup_match_1): Remove now useless if (0).
+
 Sat Apr  3 11:37:20 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
 
 	* tm.texi (USE_LOAD_POST_DECREMENT, USE_LOAD_PRE_DECREMENT,
