--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr  2 17:36:10 1999  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/arm.c (arm_print_operand): Print large constants in
+	hex rather than decimal.
+
 Fri Apr  2 17:23:58 1999  Nick Clifton  <nickc@cygnus.com>
 
 	* print-rtl.c (print_rtx): Use both HOST_WIDE_INT_PRINT_DEC
