--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Sat Apr  3 00:53:29 EST 1999  John Wehle  (john@feith.com)
+
+	* i386.md (floatsisf2, floatdisf2, floatsidf2, floatdidf2,
+	floatsixf2, floatdixf2): Rewrite using a splitter.
+
 Fri Apr  2 17:36:10 1999  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm.c (arm_print_operand): Print large constants in
