--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-03  Jason Merrill  <jason@yorick.cygnus.com>
+
+	* class.c (maybe_fixup_vptrs, build_class_init_list): Lose.
+	(finish_struct_1): Don't call build_class_init_list.
+
 1999-04-02  Mark Mitchell  <mark@codesourcery.com>
 
 	* tinfo.h (__class_type_info): Fix illegal declaration.
