* inclhack.tpl: insert spaces between `sed -e' and '...' Reported by Kaveh R. Ghazi <ghazi@caip.rutgers.edu> * fixinc/fixincl.sh, fixinc/fixincl.x, fixinc/inclhack.sh: regen
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26155 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Sat Apr  3 17:05:13 1999  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* inclhack.tpl: insert spaces between `sed -e' and '...'
+	Reported by Kaveh R. Ghazi <ghazi@caip.rutgers.edu>
+	* fixinc/fixincl.sh, fixinc/fixincl.x, fixinc/inclhack.sh: regen 
+	
 Sat Apr  3 14:54:46 1999  Craig Burley  <craig@jcb-sc.com>
 
 	* tree.def (BLOCK): Fix typo in comment.
