--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Sat Apr  3 17:57:35 1999  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* Makefile.in (install-headers-tar, install-headers-cpio): avoid
+	problems with CDPATH
+	Reported by Ralf Canis <canis@bigfoot.com>
+
 Sat Apr  3 13:50:16 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* fixinc.x86-linux-gnu: Deleted.
