* gcc.texi: Add info on regmove pass
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26160 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 Sat Apr  3 16:22:59 1999  Toshiyasu Morita  (tm@netcom.com)
 
+	* gcc.texi: Add info on regmove pass
+
 	* regmove.c (fixup_match_1): Consistently evaluate
 	HAVE_POST_INCREMENT and HAVE_POST_DECREMENT.
 
