--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -895,10 +895,10 @@
   ""
   "
 {
-  if (GET_CODE (operands[2]) == CONST_INT && !add_operand (operands[2], SImode))
+  if (GET_CODE (operands[2]) == CONST_INT
+		&& ! add_operand (operands[2], SImode))
     {
-      rtx tmp = ((reload_in_progress || reload_completed
-		  || rtx_equal_p (operands[0], operands[1]))
+      rtx tmp = ((no_new_pseudos || rtx_equal_p (operands[0], operands[1]))
 		 ? operands[0] : gen_reg_rtx (SImode));
 
       HOST_WIDE_INT low = INTVAL (operands[2]) & 0xffff;
@@ -1953,11 +1953,10 @@
   "
 {
   if (GET_CODE (operands[2]) == CONST_INT
-      && !logical_operand (operands[2], SImode))
+      && ! logical_operand (operands[2], SImode))
     {
       HOST_WIDE_INT value = INTVAL (operands[2]);
-      rtx tmp = ((reload_in_progress || reload_completed
-		  || rtx_equal_p (operands[0], operands[1]))
+      rtx tmp = ((no_new_pseudos || rtx_equal_p (operands[0], operands[1]))
 		 ? operands[0] : gen_reg_rtx (SImode));
 
       emit_insn (gen_iorsi3 (tmp, operands[1],
@@ -2061,11 +2060,10 @@
   "
 {
   if (GET_CODE (operands[2]) == CONST_INT
-      && !logical_operand (operands[2], SImode))
+      && ! logical_operand (operands[2], SImode))
     {
       HOST_WIDE_INT value = INTVAL (operands[2]);
-      rtx tmp = ((reload_in_progress || reload_completed
-		  || rtx_equal_p (operands[0], operands[1]))
+      rtx tmp = ((no_new_pseudos || rtx_equal_p (operands[0], operands[1]))
 		 ? operands[0] : gen_reg_rtx (SImode));
 
       emit_insn (gen_xorsi3 (tmp, operands[1],
@@ -4798,10 +4796,9 @@
     }
   else
     if (GET_CODE (operands[2]) == CONST_INT
-	&& !add_operand (operands[2], DImode))
+	&& ! add_operand (operands[2], DImode))
       {
-	rtx tmp = ((reload_in_progress || reload_completed
-		    || rtx_equal_p (operands[0], operands[1]))
+	rtx tmp = ((no_new_pseudos || rtx_equal_p (operands[0], operands[1]))
 		   ? operands[0] : gen_reg_rtx (DImode));
 
 	HOST_WIDE_INT low = INTVAL (operands[2]) & 0xffff;
@@ -5489,11 +5486,10 @@
   "
 {
   if (GET_CODE (operands[2]) == CONST_INT
-      && !logical_operand (operands[2], DImode))
+      && ! logical_operand (operands[2], DImode))
     {
       HOST_WIDE_INT value = INTVAL (operands[2]);
-      rtx tmp = ((reload_in_progress || reload_completed
-		  || rtx_equal_p (operands[0], operands[1]))
+      rtx tmp = ((no_new_pseudos || rtx_equal_p (operands[0], operands[1]))
 		 ? operands[0] : gen_reg_rtx (DImode));
 
       emit_insn (gen_iordi3 (tmp, operands[1],
@@ -5558,11 +5554,10 @@
   "
 {
   if (GET_CODE (operands[2]) == CONST_INT
-      && !logical_operand (operands[2], DImode))
+      && ! logical_operand (operands[2], DImode))
     {
       HOST_WIDE_INT value = INTVAL (operands[2]);
-      rtx tmp = ((reload_in_progress || reload_completed
-		  || rtx_equal_p (operands[0], operands[1]))
+      rtx tmp = ((no_new_pseudos || rtx_equal_p (operands[0], operands[1]))
 		 ? operands[0] : gen_reg_rtx (DImode));
 
       emit_insn (gen_xordi3 (tmp, operands[1],
@@ -5796,9 +5791,7 @@
       value = INTVAL (offset);
       if (value != 0)
 	{
-	  rtx tmp = ((reload_in_progress || reload_completed)
-		     ? operands[0]
-		     : gen_reg_rtx (Pmode));
+	  rtx tmp = (no_new_pseudos ? operands[0] : gen_reg_rtx (Pmode));
 	  emit_insn (gen_movsi_got (tmp, operands[1]));
 	  emit_insn (gen_addsi3 (operands[0], tmp, offset));
 	  DONE;
@@ -5885,14 +5878,13 @@
       DONE;
     }
 
-  if (TARGET_ELF && TARGET_NO_TOC && !TARGET_64BIT
-      && !flag_pic
+  if (TARGET_ELF && TARGET_NO_TOC && ! TARGET_64BIT
+      && ! flag_pic
       && CONSTANT_P (operands[1])
       && GET_CODE (operands[1]) != HIGH
       && GET_CODE (operands[1]) != CONST_INT)
     {
-      rtx target = (reload_completed || reload_in_progress)
-			? operands[0] : gen_reg_rtx (SImode);
+      rtx target = (no_new_pseudos ? operands[0] : gen_reg_rtx (SImode));
 
       /* If this is a function address on -mcall-aixdesc or -mcall-nt,
 	 convert it to the address of the descriptor.  */
@@ -5918,7 +5910,7 @@
 
   if (GET_CODE (operands[1]) == CONST
       && DEFAULT_ABI == ABI_NT
-      && !side_effects_p (operands[0]))
+      && ! side_effects_p (operands[0]))
     {
       rtx const_term = const0_rtx;
       rtx sym = eliminate_constant_term (XEXP (operands[1], 0), &const_term);
@@ -5926,10 +5918,9 @@
 	  && (GET_CODE (sym) == SYMBOL_REF || GET_CODE (sym) == LABEL_REF))
 	{
 	  unsigned HOST_WIDE_INT value = INTVAL (const_term);
-	  int new_reg_p = (flag_expensive_optimizations
-			   && !reload_completed
-			   && !reload_in_progress);
-	  rtx tmp1 = (new_reg_p && value != 0) ? gen_reg_rtx (SImode) : operands[0];
+	  int new_reg_p = (flag_expensive_optimizations && ! no_new_pseudos);
+	  rtx tmp1 = ((new_reg_p && value != 0)
+		      ? gen_reg_rtx (SImode) : operands[0]);
 
 	  emit_insn (gen_movsi (tmp1, sym));
 	  if (INTVAL (const_term) != 0)
@@ -5940,7 +5931,7 @@
 	rs6000_fatal_bad_address (operands[1]);
     }
 
-  if ((!TARGET_WINDOWS_NT || DEFAULT_ABI != ABI_NT)
+  if ((! TARGET_WINDOWS_NT || DEFAULT_ABI != ABI_NT)
       && CONSTANT_P (operands[1])
       && GET_CODE (operands[1]) != CONST_INT
       && GET_CODE (operands[1]) != HIGH
@@ -6161,8 +6152,7 @@
 	  && (FP_REGNO_P (REGNO (operands[1]))
 	      || REGNO (operands[1]) >= FIRST_PSEUDO_REGISTER))
 	{
-	  rtx newreg
-	    = reload_in_progress ? operands[1] : gen_reg_rtx (SFmode);
+	  rtx newreg = (no_new_pseudos ? operands[1] : gen_reg_rtx (SFmode));
 	  emit_insn (gen_aux_truncdfsf2 (newreg, operands[1]));
 	  operands[1] = newreg;
 	}
