--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sun Apr 4 01:15:04 PST 1999 Jeff Law  (law@cygnus.com)
+
+	* version.c: Bump for snapshot.
+
 Sun Apr  4 00:14:54 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* fixinc/hackshell.tpl: Skip links to directories, to avoid
