--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Sun Apr  4 04:02:53 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* gcc.c-torture/execute/990404-1.c: New test.
+
 1999-04-03 10:35 -0500  Zack Weinberg  <zack@rabi.columbia.edu>
 
 	* gcc.dg/cpp-if1.c: Adjust regexps to accommodate cccp.
