--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Sun Apr  4 04:05:04 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* stmt.c (expand_loop_end): When copying the loop exit test,
+	do not walk into a nested loop.
+
 Sun Apr 4 01:15:04 PST 1999 Jeff Law  (law@cygnus.com)
 
 	* version.c: Bump for snapshot.
