* pt.c (check_template_shadow): Don't treat OVERLOADs as _DECL 	nodes.  Tidy.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@26188 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-04  Mark Mitchell  <mark@codesourcery.com>
+
+	* pt.c (check_template_shadow): Don't treat OVERLOADs as _DECL
+	nodes.  Tidy.
+
 1999-04-03  Jason Merrill  <jason@yorick.cygnus.com>
 
 	* class.c (maybe_fixup_vptrs, build_class_init_list): Lose.
