--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,11 +1,15 @@
+Mon Apr  5 04:47:14 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* i386.c (x86_double_with_add): Turn off for Pentium and PPro.
+	(small_shift_operand, output_ashlsi3): New functions.
+	* i386.h (small_shift_operand, output_ashlsi3): Declare.
+	* i386.md (ashlsi3): Simplify ahlsi3 patterns.  Remove splitters
+	that are no longer needed.
+
 Sun Apr  4 04:05:04 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* stmt.c (expand_loop_end): When copying the loop exit test,
 	do not walk into a nested loop.
-
-Sun Apr 4 01:15:04 PST 1999 Jeff Law  (law@cygnus.com)
-
-	* version.c: Bump for snapshot.
 
 Sun Apr  4 00:14:54 1999  Jeffrey A Law  (law@cygnus.com)
 
