--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Mon Apr 5 03:52:30 PDT 1999 Jeff Law  (law@cygnus.com)
+
+	* version.c: Bump for snapshot.
+
 Mon Apr  5 04:47:14 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* i386.c (x86_double_with_add): Turn off for Pentium and PPro.
