--- a/newppc-branch/gcc/config/rs6000/ChangeLog
+++ b/newppc-branch/gcc/config/rs6000/ChangeLog
@@ -1,5 +1,9 @@
 2000-01-19  Geoff Keating  <geoffk@cygnus.com>
 
+	* rs6000.c (rs6000_va_arg): Delete some unused variables.
+
+2000-01-19  Geoff Keating  <geoffk@cygnus.com>
+
 	* rs6000.c (rs6000_va_arg): On AIX, padding for small arguments
 	goes after the argument.
 
